--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,8 +1,8 @@
 div {
-  display: flex;
-  justify-content: center;
-}
-a {
-  color: white;
-  text-decoration: 1px underline;
+  text-align: center;
+
+  a {
+    color: white;
+    text-decoration: 1px underline;
+  }
 }
