--- a/src/app/play/hints/hints.component.html
+++ b/src/app/play/hints/hints.component.html
@@ -1,8 +1,18 @@
-<div *ngIf="settings | async as settings" class="hints row">
-  <div class="col-md-6">
-    <button [disabled]="!settings.fiftyFifty || hintsService.fiftyUsed" (click)="useFifty()">50/50</button>
+<div *ngIf="settings$ | async as settings" class="hints row">
+  <div class="col-md-6 col-sm-12">
+    <button
+      [disabled]="!settings.fiftyFifty || hintsService.fiftyUsed"
+      (click)="useFifty()"
+      matTooltip="Можливість прибрати дві неправильні відповіді">
+      50/50
+    </button>
   </div>
-  <div class="col-md-6">
-    <button [disabled]="!settings.help || hintsService.helpUsed" (click)="useHelp()">Домога залу</button>
+  <div class="col-md-6 col-sm-12">
+    <button
+      [disabled]="!settings.help || hintsService.helpUsed"
+      (click)="useHelp()"
+      matTooltip="Друг скаже думку про правильну відповідь">
+      <mat-icon> phone</mat-icon>
+    </button>
   </div>
 </div>
