--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,20 +1,30 @@
 .header {
   margin: 15px 30px;
 
-  >div {
+  >.button-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    >img {
-      width: 50px;
-    }
+    justify-content: end;
+    gap: 10px;
   }
 }
 
-.button-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
+@media(max-width: 986px) {
+  button {
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 817px) {
+  button {
+    padding: 3px;
+  }
+}
+
+@media(max-width: 768px) {
+  .header {
+
+    >.button-container {
+      justify-content: center;
+    }
+  }
 }
