--- a/src/app/play/hints/hints.component.scss
+++ b/src/app/play/hints/hints.component.scss
@@ -1,23 +1,52 @@
 .hints {
-  position:absolute;
-  top: 100px;
-  right: 70%;
-  width: 300px;
+  width: 200px;
+
+  >div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   button {
-    border-radius: 50%;
-    border: none;
-    width: 100px;
-    height: 100px;
-    background-color: #20a3fa;
+    width: 50px;
+    height: 50px;
     color: white;
+    border-radius: 24px;
+    border: 2px solid white;
+    background-color: rgb(2, 72, 119);
+    font-size: 12px;
+    text-align: center;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    >mat-icon {
+      font-size: 24px;
+    }
 
     &:hover {
-      background-color: #00ccff;
+      background-color: #0091b6;
     }
+
     &[disabled] {
-      background-color: #005f77;
-      opacity: 0.6;
+      background-color: rgb(2, 60, 99);
+      opacity: 0.5;
+      border: none;
+    }
+
+    &:active {
+      transform: translateY(2px);
+     }
+  }
+}
+
+
+@media(max-width: 768px) {
+  .hints {
+
+    button {
+      margin-bottom: 10px;
     }
   }
 }
