--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,24 +1,57 @@
-<div class="logo">
-  <img src="assets/img/logo.svg" alt="">
-</div>
-<div *ngIf="questions" class="question row">
-  <div class="question__text col-md-12">
-    <div>{{questions[numberOfActualQuestion-1].question}}</div>
+<ng-container *ngIf="pay">
+  <div *ngIf="noQuestions; else noQuestions" class="play">
+
+    <div class="play__head row">
+      <div class="hints col-md-3 col-4">
+        <app-hints (useHelpHint)="useHelpHint()" (useFiftyHint)="useFiftyHint()"></app-hints>
+      </div>
+
+      <div class="logo col-md-6 col-4">
+        <img src="assets/img/logo.svg" alt="">
+      </div>
+
+      <div class="results-options col-md-3 col-4">
+        <div (click)="toggleResults()">
+          <span>{{(pay![settings.questionsNumber][pay![settings.questionsNumber].length - numberOfActualQuestion + 1] || 0) | currency:'USD':'symbol':'0.0-0' }}</span>
+          <mat-icon>arrow_right_alt</mat-icon>
+          <span>{{pay![settings.questionsNumber][pay![settings.questionsNumber].length - numberOfActualQuestion] | currency:'USD':'symbol':'0.0-0'}}</span>
+          <mat-icon *ngIf="!showResults">keyboard_arrow_down</mat-icon>
+          <mat-icon *ngIf="showResults">keyboard_arrow_up</mat-icon>
+        </div>
+        <div
+          *ngIf="showResults"
+          class="results"
+          [ngClass]="{
+            'x-small-length': settings.questionsNumber === 6,
+            'small-length': settings.questionsNumber === 8,
+            'medium-length': settings.questionsNumber === 12,
+            'long-length' :  settings.questionsNumber === 16,
+            'very-long-length' :  settings.questionsNumber === 20}">
+          <app-results-table></app-results-table>
+        </div>
+      </div>
+    </div>
+
+    <div class="question row">
+      <div class="question__text col-md-12">
+        <div>{{questions[numberOfActualQuestion-1].question}}</div>
+      </div>
+      <div class="answers row">
+        <div *ngFor="let l of ['a', 'b', 'c', 'd']" [ngClass]="{'hidden': fifty.includes(l)}" class="col-md-6">
+          <div
+            (click)="checkAnswer(l)"
+            [ngClass]="{
+            'right': result.letter == l && result.answer,
+            'wrong': result.letter == l && !result.answer
+            }">
+            {{l.toUpperCase()}} :  {{questions[numberOfActualQuestion-1][l]}}
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
-  <div class="answers row">
-    <div [ngClass]="{'hidden': fifty.includes('a')}" class="col-md-6">
-      <div (click)="checkAnswer('a')" [ngClass]="{ 'right': result.letter == 'a' && result.answer == true, 'wrong': result.letter == 'a' && result.answer == false}">A :  {{questions[numberOfActualQuestion-1].a}}</div>
-    </div>
-    <div [ngClass]="{'hidden': fifty.includes('b')}" class="col-md-6">
-      <div (click)="checkAnswer('b')" [ngClass]="{ 'right': result.letter == 'b' && result.answer == true, 'wrong': result.letter == 'b' && result.answer == false}">B :  {{questions[numberOfActualQuestion-1].b}}</div>
-    </div>
-    <div [ngClass]="{'hidden': fifty.includes('c')}" class="col-md-6">
-      <div (click)="checkAnswer('c')" [ngClass]="{ 'right': result.letter == 'c' && result.answer == true, 'wrong': result.letter == 'c' && result.answer == false}">C :  {{questions[numberOfActualQuestion-1].c}}</div>
-    </div>
-    <div [ngClass]="{'hidden': fifty.includes('d')}" class="col-md-6">
-      <div (click)="checkAnswer('d')" [ngClass]="{ 'right': result.letter == 'd' && result.answer == true, 'wrong': result.letter == 'd' && result.answer == false}">D :  {{questions[numberOfActualQuestion-1].d}}</div>
-    </div>
-  </div>
-</div>
-<app-results-table></app-results-table>
-<app-hints (useHelpHint)="useHelpHint()" (useFiftyHint)="useFiftyHint()"></app-hints>
+  <ng-template #noQuestions>
+    <div>У вас не має запитань, будь ласка натисніть "Нова гра" щоб почати гру</div>
+  </ng-template>
+</ng-container>
