--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -1,9 +1,92 @@
+.play {
+  min-height: 75vh !important;
+  display: flex;
+  flex-direction: column;
+}
+
 .logo {
-  width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+
   >img {
-    width: 300px;
+    width: 50%;
+    max-height: 200px;
+  }
+}
+
+.play__head {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  >div{
+    margin: 0;
+  }
+}
+
+.hints {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+
+.results-options {
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  cursor: pointer;
+
+  >div {
+    margin: 0;
+    max-width: 200px;
+    width: 100%;
+    height: 50px;
+    padding: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    border: 1px solid white;
+    transition: opacity 0.5s ease;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  .results {
+    position: absolute;
+    width: 100%;
+    top: 120px;
+    border: none;
+    box-sizing: border-box;
+
+    &.x-small-length {
+      top: 150px;
+    }
+
+    &.small-length {
+      top: 190px;
+    }
+
+    &.medium-length {
+      top: 240px;
+    }
+
+    &.long-length {
+      top: 260px;
+    }
+
+    &.very-long-length {
+      top: 300px;
+    }
+
+    >app-results-table{
+      width: 100%;
+      max-width: 200px !important;
+    }
   }
 }
 
@@ -11,7 +94,10 @@
   margin: 30px 0;
   display: flex;
   justify-content: center;
+  align-self: flex-end;
   width: 100%;
+  box-sizing: border-box;
+  margin-top: auto;
 
   >.answers {
 
@@ -40,7 +126,7 @@
       min-width: 40%;
       max-width: 60%;
       max-height: 150px;
-      margin: 10px;
+      margin: 10px 0;
       padding: 30px;
       border-radius: 24px;
       border: 2px solid black;
@@ -61,4 +147,32 @@
 
 .hidden {
   visibility: hidden;
+}
+
+@media(max-width: 768px){
+  .logo {
+
+    >img {
+      width: 100%;
+    }
+  }
+}
+
+@media(max-width: 500px){
+
+  .question {
+
+    >.question__text {
+
+      >div {
+        max-width: 80%;
+        max-height: 300px;
+        padding: 10px;
+      }
+    }
+  }
+
+  .play__head {
+    height: 250px;
+  }
 }
