--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,31 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #0B184F;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+  max-width: 100% !important;
   color: white;
+}
+
+.popup-success {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  z-index: 9999;
+}
+
+.popup-error {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #F44336;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  z-index: 9999;
 }
