--- a/src/app/creation/creation.component.scss
+++ b/src/app/creation/creation.component.scss
@@ -4,15 +4,18 @@
 
 .game-mode {
   margin: 20px 0;
+  height: 40px;
 
   >button {
     width: 300px;
     border: none;
     padding: 10px;
+    height: 100%;
     &.right {
       border-top-right-radius: 6px;
       border-bottom-right-radius: 6px;
     }
+
     &.left {
       border-top-left-radius: 6px;
       border-bottom-left-radius: 6px;
@@ -30,12 +33,13 @@ form {
       margin: 20px;
       padding: 20px;
       width: 700px;
-      max-width: 100%;
+      max-width: 90%;
       border-radius: 24px;
       border: none;
       min-height: 150px;
       max-height: 150px;
       overflow-y: hidden;
+      box-sizing: border-box;
     }
 
   .answer-wrapper {
@@ -57,7 +61,7 @@ form {
       margin: 0;
       padding: 10px;
       width: 700px;
-      max-width: 80%;
+      max-width: 70%;
       border-radius: 12px;
       border: none;
       height: 50px;
@@ -211,7 +215,8 @@ form {
   .game-mode {
 
     >button {
-      font-size: 12px;
+      font-size: 10px;
+      padding: 2px;
     }
   }
 }
